--- a/.travis.yml
+++ b/.travis.yml
@@ -34,12 +34,11 @@ before_install:
 
 install:
     # install your own package into the environment
-    # pip install -e rather than setup.py, so that coverage can find the source
-    - pip install -e ./
+    - pip install -e .[tests]
 
 script:
     - python --version
-    - nosetests --with-coverage --cover-erase --cover-package=pyrubberband -v -w tests/
+    - py.test
 
 after_success:
     - coveralls
