update requirements and pytest configuration
- numpy is added as an install requirement because it is imported in
  pyrb.py.

- the --pep8 flag to pytest and the pytest-pep8 requirement removed
  because usage leads to failure in test collection. Tests pass without
  the flag.

- updated testing instructions in CONTRIBUTING.md

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,2 @@
 [tool:pytest]
-addopts = --ignore docs/conf.py --cov-report term-missing --cov pyrubberband --pep8
+addopts = --ignore docs/conf.py --cov-report term-missing --cov pyrubberband
