--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,7 @@ classifiers =
 [options]
 packages = find:
 install_package_data = True
-python_requires >= 3.6
+python_requires = >= 3.6
 install_requires =
     numpy
     six
