--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI-minimal
+name: CI
 
 on:
   push:
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python: ["3.7"]
+        python: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
 
     steps:
       - uses: actions/checkout@v4
@@ -27,7 +27,7 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y rubberband-cli
 
       - name: Install dependencies
-        run: pip install --use-deprecated=legacy-resolver --no-deps -e .[tests]
+        run: pip install -e .[tests]
 
       - name: Run test
         run: python -m pytest tests
