--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,6 @@ classifiers =
     Intended Audience :: Developers
     Topic :: Multimedia :: Sound/Audio :: Analysis
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
@@ -33,10 +32,9 @@ classifiers =
 [options]
 packages = find:
 install_package_data = True
-python_requires = >=3.6
+python_requires = >=3.7
 install_requires =
-    numpy
-    six
+    numpy >= 1.0
     soundfile >= 0.12.1
 
 [options.extras_require]
@@ -45,4 +43,3 @@ docs =
 tests =
     pytest
     pytest-cov
-    contextlib2
